<resources>
    <string name="app_name">Sangam 3</string>
    <string name="open">sangam 3</string>
    <string name="close">sangam 3</string>
    <string name="infot">One of the four Kumbh held in India, Allahabad\'s Kumbh takes place on the holy banks of the meeting point, or Sangam, of three holy rivers, namely Ganga, Yamuna and the invisible Saraswati in the month of February.</string>
    <string name="infot2">Kumbh has been listed as UNESCO\'s Representative List of Intangible Cultural Heritage of Humanity. It\'s one of the largest religious congregations in the world. It takes place once in 12 years at any given place, so make sure you don\'t miss the chance!</string>
    <string name="infot3">Kumbh usually is hosted in the month of February, but the date hugely depends on the Hindu calendar Vikram Samvat.</string>
    <string name="infot4">Allahabad boasts proudly of a great connectivity, though not as great as the big metropolitan cities. Allahabad also has its own airport, making it convenient for the internationak passengers to travel conveniently to this holy place. one can also reach Allahabad via trains or buses too.</string>
    <string name="infot5">So grab your backpacks and suitcases and don\'t miss out on this mega event.</string>
</resources>
